# base-agent-v2

./: .gitignore  README.md  ssh  ssh.pub  vercel.json
api/: app.py  pyproject.toml  requirements.txt  vercel_app.py
docs/: README.md  backend-setup.md  deployment.md  env-vars.md  frontend-setup.md
frontend/src/: App.tsx
